<resources>
    <string name="app_name">Fitfume</string>
    <string name="home_title">Home</string>
    <string name="recommend_title">Recommend</string>
    <string name="search_title">Search</string>
    <string name="my_title">My</string>
    <string name="campsite_event_banner_count">7</string>
    <string name="campsite_event_banner_default">1</string>
    <string name="event_banner_count_slash">&#160;/&#160;</string>
    <string name="home_search_title">사진으로 향수 찾기</string>
    <string name="home_search_description">사진 하나만 있으면\n원하는 향수를 찾을 수 있어요!</string>
    <string name="home_best_perfume_top">🌷봄바람 휘날리며~ 🌷</string>
    <string name="home_best_perfume_bottom">봄과 어울리는 향수 베스트 5</string>
    <string name="home_new_perfume">🌱신상 향수 🌱</string>
    <string name="my_context_user_nickname">님</string>
    <string name="my_context_review">내가 작성한 리뷰</string>
    <string name="slash">/</string>
    <string name="review_temp_text">동해물과 백두산이 마르고 닳도록\n하느님이 보우하사\n우리나라 만세\n무궁화 삼천리 화려강산\n대한사람 대한으로 길이 보전하세</string>
    <string name="logout">로그아웃</string>
    <string name="recommend_toolbar_title">어울리는 향수 찾기</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommend_question_one">Q1. 성별은 어떻게 되시나요?</string>
    <string name="recommend_question_one_detail">본인 혹은 선물을 주고 싶은 그 사람의 성별을 골라주세요.</string>
    <string name="recommend_question_two">Q2. 어떤 스타일의 옷을 선호하시나요?</string>
    <string name="recommend_question_two_detail">본인 혹은 선물을 주고 싶은 그 사람이 자주 입는 스타일을 골라주세요.</string>
    <string name="recommend_question_two_one">캐주얼</string>
    <string name="recommend_question_two_two">스트릿</string>
    <string name="recommend_question_two_three">미니멀</string>
    <string name="recommend_question_two_four">정장</string>
    <string name="recommend_question_three">Q3. 성격은 어떻게 되시나요?</string>
    <string name="recommend_question_three_detail">본인 혹은 선물을 주고 싶은 그 사람의 성격을 골라주세요.</string>
    <string name="recommend_question_three_one">내향적</string>
    <string name="recommend_question_three_two">외향적</string>
    <string name="recommend_question_four">Q4. 나이대는 어떻게 되시나요?</string>
    <string name="recommend_question_four_detail">본인 혹은 선물을 주고 싶은 그 사람의 나이를 골라주세요.</string>
    <string name="recommend_question_four_one">10대</string>
    <string name="recommend_question_four_two">20대</string>
    <string name="recommend_question_four_three">30대</string>
    <string name="recommend_question_four_four">40대</string>
    <string name="recommend_end_title">당신에게 어울리는 향수는?</string>
    <string name="man">남성</string>
    <string name="woman">여성</string>
    <string name="preview">이전</string>
    <string name="next">다음</string>
    <string name="go_to_main">메인 화면으로</string>
    <string name="search_bar_hint">검색어를 입력하세요.</string>
    <string name="search_intro_context">아래의 검색어를 눌러 쉽게 검색해보세요.</string>
    <string name="jomalone">조말론</string>
    <string name="diptyque">딥티크</string>
    <string name="channel">샤넬</string>
    <string name="dior">디올</string>
    <string name="lanvin">랑방</string>
    <string name="gucci">구찌</string>
    <string name="spring">봄</string>
    <string name="summer">여름</string>
    <string name="autumn">가을</string>
    <string name="winter">겨울</string>
    <string name="neutrality">중성</string>
    <string name="search">검색</string>
    <string name="perfume_topNote">Top Note</string>
    <string name="perfume_middleNote">Middle Note</string>
    <string name="perfume_baseNote">Base Note</string>
    <string name="perfume_persistence">지속력</string>
    <string name="perfume_sexual">성향</string>
    <string name="perfume_weather">계절</string>
    <string name="perfume_style">스타일</string>
    <string name="perfume_review">리뷰</string>
    <string name="review_more_info">더보기</string>
    <string name="perfume_go_to_review">리뷰 작성하기</string>
    <string name="home_recommend_mbti">🌸 나의 MBTI 어울리는 향수, 보고 가세요 🌸</string>
    <string name="e">E</string>
    <string name="i">I</string>
    <string name="s">S</string>
    <string name="n">N</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="p">P</string>
    <string name="j">J</string>
    <string name="mbti_e_top">외향적, 개방적</string>
    <string name="mbti_e_bottom">활동적인 삶이 좋아</string>
    <string name="mbti_s_top">현실적, 실제적</string>
    <string name="mbti_s_bottom">사실과 경험이 내 기반</string>
    <string name="mbti_t_top">분석적, 논리적</string>
    <string name="mbti_t_bottom">슬픔을 나눠..? 슬과 픔..?</string>
    <string name="mbti_j_top">계획적, 체계적</string>
    <string name="mbti_j_bottom">일단 계획을 세워보자</string>
    <string name="mbti_i_top">내성적, 내향적</string>
    <string name="mbti_i_bottom">혼자있는 시간 최고야</string>
    <string name="mbti_n_top">직관적, 창의적</string>
    <string name="mbti_n_bottom">얘들아 있잖아 만약에~</string>
    <string name="mbti_f_top">감성적, 정서적</string>
    <string name="mbti_f_bottom">슬픔은 나누면 반이 된다</string>
    <string name="mbti_p_top">적응적, 융통성</string>
    <string name="mbti_p_bottom">일단 해보면 알겠지?</string>
    <string name="show">보기</string>
    <string name="mbti_result">MBTI로 향수 추천받기</string>
    <string name="email_context">이메일</string>
    <string name="pw_context">비밀번호</string>
    <string name="search_Id">아이디 찾기</string>
    <string name="search_pw">비밀번호 찾기</string>
    <string name="sign_up_btn">회원가입하기</string>
    <string name="login_btn">로그인 하기</string>
    <string name="login_kakao_btn">카카오 로그인</string>
    <string name="login_seach_slash">/</string>
    <string name="signup_username">닉네임</string>
    <string name="star">별점</string>
    <string name="vitality">지속력</string>
    <string name="gender">성향</string>
    <string name="season">계절</string>
    <string name="style">스타일</string>
    <string name="review">리뷰</string>
</resources>