<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_home"
        android:enabled="true"
        android:icon="@drawable/icon_home_drawable"
        android:title="@string/home_title" />

    <item
        android:id="@+id/main_recommend"
        android:enabled="true"
        android:icon="@drawable/icon_recommend_drawable"
        android:title="@string/recommend_title" />

    <item
        android:id="@+id/main_search"
        android:enabled="true"
        android:icon="@drawable/icon_search_drawable"
        android:title="@string/search_title" />

    <item
        android:id="@+id/main_my"
        android:enabled="true"
        android:icon="@drawable/icon_my_drawable"
        android:title="@string/my_title" />
</menu>