<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecommendQ3Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recommend_context_cl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.692">

        <TextView
            android:id="@+id/recommend_question_count_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="18dp"
            android:autoSizeMinTextSize="1dp"
            android:autoSizeStepGranularity="1dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/recommend_question_three"
            android:textColor="@color/black"
            app:layout_constraintHeight_percent="0.543"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.731" />

        <TextView
            android:id="@+id/recommend_question_detail_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="12dp"
            android:autoSizeMinTextSize="1dp"
            android:autoSizeStepGranularity="1dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/recommend_question_three_detail"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.343"
            app:layout_constraintWidth_percent="0.888" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recommend_one_cl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/login_background_drawable"
        android:elevation="2dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recommend_context_cl"
        app:layout_constraintWidth_percent="0.389">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recommend_one_image_cl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/recommend_question_three_one"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/recommend_one_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="16dp"
            android:autoSizeMinTextSize="1dp"
            android:autoSizeStepGranularity="1dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/pretendard_semibold"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/recommend_question_three_one"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.095"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommend_one_image_cl" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recommend_two_cl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/login_background_drawable"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toBottomOf="@+id/recommend_context_cl"
        app:layout_constraintWidth_percent="0.389">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recommend_two_image_cl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/recommend_question_three_two"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/recommend_two_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="16dp"
            android:autoSizeMinTextSize="1dp"
            android:autoSizeStepGranularity="1dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/pretendard_semibold"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/recommend_question_three_two"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.095"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommend_two_image_cl" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/recommend_preview_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:autoSizeMaxTextSize="15dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeStepGranularity="1dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/recomment_white_background_btn_drawable"
        android:elevation="2dp"
        android:fontFamily="@font/pretendard_semibold"
        android:text="@string/preview"
        android:textColor="@color/main_Color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.389" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/recommend_next_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:autoSizeMaxTextSize="15dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeStepGranularity="1dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/recommend_main_color_btn_drawable"
        android:elevation="2dp"
        android:fontFamily="@font/pretendard_semibold"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.068"
        app:layout_constraintWidth_percent="0.389" />
</androidx.constraintlayout.widget.ConstraintLayout>